# crypto_impl

./: .clangd  .gitignore  README.md  docker-compose.yml
analysis/: parse_pcaps.py  parse_results.py  plot_results.py  report.py  requirements.txt  statistics.py
configs/: scenarios.yaml
docker/base/: Dockerfile
docker/quic-client/: Dockerfile  entrypoint.sh
docker/quic-server/: Dockerfile  entrypoint.sh
docker/tls-client/: Dockerfile  entrypoint.sh
docker/tls-server/: Dockerfile  entrypoint.sh
docs/: USAGE.md  article.html
results/raw/20260403_222613/: metadata.json
results/raw/20260403_223109/: metadata.json
scripts/: apply_network.sh  collect_pcaps.sh  run_experiments.sh  run_quic.sh  run_tls.sh
src/certs/: gen_certs.sh
src/quic/: .clangd  CMakeLists.txt  client.c  server.c
src/quic/ide_stubs/: msquic.h
src/tls/: .clangd  CMakeLists.txt  client.c  server.c
src/tls/ide_stubs/: posix_types.h
src/tls/ide_stubs/openssl/: err.h  provider.h  ssl.h
